# BorisBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
borisbot/: cli.py  contracts.py  failures.py
borisbot/agent/: runtime.py  worker.py
borisbot/browser/: actions.py  command_router.py  executor.py  task_runner.py
borisbot/cli/: record.py
borisbot/guide/: __init__.py  chat_history_store.py  server.py
borisbot/llm/: cost_guard.py  engine.py  errors.py  middleware_stack.py  ollama_health.py  planner_contract.py  planner_validator.py  provider_health.py  routing.py
borisbot/recorder/: __init__.py  analyzer.py  injector.js  runner.py  server.py  session.py
borisbot/supervisor/: agent_manager.py  api_admin.py  api_metrics.py  api_stream.py  api_tasks.py  app.py  browser_capability_guard.py  browser_manager.py  capability_manager.py  database.py  heartbeat_runtime.py  migrations.py  models.py  profile_config.py  provider_secrets.py  state.py  worker.py  (+1 more)
docs/: contracts.md  reliability-gate.md
tests/: test_browser_manager_scaffold.py  test_browser_manager_urls.py  test_chat_history_store.py  test_cli_workflow_contracts.py  test_cost_guard_budget_status.py  test_failure_taxonomy.py  test_golden_planner_regression.py  test_guide_server.py  test_heartbeat_runtime.py  test_idempotency.py  test_llm_planner_contract.py  test_llm_provider_reliability.py  test_ollama_health.py  test_planner_validator.py  test_profile_config.py  test_provider_secrets.py  test_record_runner_ports.py  test_reliability_loops.py  test_selector_analyzer.py  test_tool_permissions.py
(+7 files in other folders)
