[project]
name = "borisbot"
version = "0.1.0"
description = "Local-first multi-agent runtime framework"
authors = [
    {name = "BorisBot Team", email = "dev@borisbot.local"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "platformdirs>=4.3.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
borisbot = "borisbot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
